--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 
 application
 grellyddotcom
+grellyddotcom.zip
+/tmp
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
