Updated to ignore environment config file

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ grellyddotcom.zip
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+.ebextensions/environmentvariables.config
