--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,8 @@ grellyddotcom.zip
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+.ebextensions/*
 .ebextensions/environmentvariables.config
+
+# Hugo Generated Files
+public/
