--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,11 @@
 baseURL: /
-title: Graham L. Brown
+title: Grellyd - Graham L. Brown
 languageCode: en-ca
 theme: kubo
 disableKinds: [RSS, sitemap]
 params:
-    highlight: default
-    topmenu: categories
-    authorName: Graham L. Brown
+    AuthorName: Graham L. Brown
+    GithubUsername: grellyd
+    TwitterUsername: grellyd
+    LinkedInUsername: grellyd
 
-GithubUsername: grellyd
-TwitterUsername: grellyd
-LinkedInUsername: grellyd
