--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
     grellyddotcom:
-        image: grellyddotcom
+        build: .
         ports: 
             - "80:8080"
             - "443:8443"
