--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,5 +1,5 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+# Workflow for building and deploying my Hugo based site to DigitalOcean
+name: Deploy Hugo site and Go Server to DO
 
 on:
   # Runs on pushes targeting the default branch
@@ -40,9 +40,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v2
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
@@ -60,11 +57,15 @@ jobs:
   # Deployment job
   deploy:
     environment:
-      name: github-pages
+      name: tbd
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
