--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,23 +1,25 @@
-# Workflow for building and deploying my Hugo based site to DigitalOcean
-name: Deploy Hugo site and Go Server to DO
+# Workflow for building hugo content
+name: Build Hugo Content
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["prd"]
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  workflow_call:
+    inputs:
+      config-path:
+        required: true
+        type: string
+      secrets:
+        envPAT:
+          required: true
 
 # Allow one concurrent deployment
 concurrency:
-  group: "pages"
+  group: "hugo"
   cancel-in-progress: true
 
 # Default to bash
@@ -51,21 +53,6 @@ jobs:
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+        # todo: write back to repo
         with:
           path: ./public
-
-  # Deployment job
-  deploy:
-    environment:
-      name: tbd
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
