--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy Hugo site and Go Server to DO
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["prd"]
+    branches: ["prd", "actions"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
