--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ params:
     LinkedInUsername: grellyd
     ContactEmail: graham@grellyd.com
     SiteName: Grellyd
-    HiddenSections: [xmas, blog, email]
+    HiddenSections: [xmas, writing, email]
 googleAnalytics: UA-127080315-1
 buildFuture: true
+pluralizelisttitles: false
